@@ -12,10 +12,13 @@ import ModuloCompras.ModuloCompras.dto.RecepcionProductoDto;
 import ModuloCompras.ModuloCompras.repository.DetalleOrdenRepository;
 import ModuloCompras.ModuloCompras.repository.RecepcionProductoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class RecepcionProductoServiceImpl implements RecepcionProductoService {
@@ -27,19 +30,38 @@ public class RecepcionProductoServiceImpl implements RecepcionProductoService {
 
     @Override
     public RecepcionProductoDto registrarRecepcion(RecepcionProductoCreateRequest req) {
+        if (req == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Payload vacío");
+        }
+        if (req.getDetalleId() == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "detalleId es obligatorio");
+        }
+        if (req.getCantidadRecibida() <= 0) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "La cantidad recibida debe ser mayor a 0");
+        }
+
         DetalleOrden detalle = detalleRepo.findById(req.getDetalleId())
-                .orElseThrow(() -> new RuntimeException("Detalle de orden no encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Detalle de orden no encontrado"));
 
         OrdenCompra orden = detalle.getOrdenCompra();
+
+        // Solo permitir recepción si la orden está APROBADA
         if (!"APROBADA".equalsIgnoreCase(orden.getEstado())) {
-            throw new RuntimeException("No se pueden recibir productos de una orden en estado " + orden.getEstado());
+            throw new ResponseStatusException(HttpStatus.CONFLICT,
+                    "No se pueden recibir productos de una orden en estado " + orden.getEstado());
         }
 
-        if (req.getCantidadRecibida() <= 0) {
-            throw new RuntimeException("La cantidad recibida debe ser mayor a 0");
+        // Verificar que no supera lo solicitado
+        int totalRecibidoHistorico = repo.findByDetalleOrdenId(detalle.getId())
+                .stream()
+                .mapToInt(RecepcionProducto::getCantidadRecibida)
+                .sum();
+
+        if (totalRecibidoHistorico + req.getCantidadRecibida() > detalle.getCantidad()) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT,
+                    "La cantidad recibida excede la cantidad solicitada (" + detalle.getCantidad() + ")");
         }
 
-        // 4. Crear recepción
         RecepcionProducto recepcion = RecepcionProducto.builder()
                 .fechaRecepcion(req.getFechaRecepcion() != null ? req.getFechaRecepcion() : LocalDate.now())
                 .cantidadRecibida(req.getCantidadRecibida())
@@ -49,32 +71,57 @@ public class RecepcionProductoServiceImpl implements RecepcionProductoService {
 
         repo.save(recepcion);
 
-        // 5. Consumir Inventarios para aumentar stock
-        productoClient.aumentarStock(detalle.getProductoId(), req.getCantidadRecibida());
-// 6. Consultar producto en Inventarios para completar info
-        ProductoDto producto = productoClient.getProductoById(detalle.getProductoId());
+        // Intentar actualizar inventario remoto (Feign)
+        try {
+            productoClient.aumentarStock(detalle.getProductoId(), req.getCantidadRecibida());
+        } catch (Exception e) {
+            // Si falla el cliente, propagamos como SERVICE_UNAVAILABLE
+            throw new ResponseStatusException(HttpStatus.SERVICE_UNAVAILABLE,
+                    "Error al comunicar con el servicio de inventarios: " + e.getMessage());
+        }
+
+        // Consultar producto para completar nombre en DTO (no obligatorio)
+        ProductoDto producto = null;
+        try {
+            producto = productoClient.getProductoById(detalle.getProductoId());
+        } catch (Exception ignored) {
+            producto = null;
+        }
 
         RecepcionProductoDto dto = mapper.toDto(recepcion);
-        dto.setProductoNombre(producto.getNombre());
-
-
+        dto.setProductoNombre(producto != null ? producto.getNombre() : "No disponible");
 
         return dto;
     }
 
     @Override
     public List<RecepcionProductoDto> listarPorDetalle(Integer detalleId) {
-        return mapper.toDtoList(repo.findByDetalleOrdenId(detalleId));
+        List<RecepcionProducto> recepciones = repo.findByDetalleOrdenId(detalleId);
+        return recepciones.stream().map(r -> {
+            RecepcionProductoDto dto = mapper.toDto(r);
+            try {
+                ProductoDto producto = productoClient.getProductoById(dto.getProductoId());
+                dto.setProductoNombre(producto != null ? producto.getNombre() : "No disponible");
+            } catch (Exception e) {
+                dto.setProductoNombre("No disponible");
+            }
+            return dto;
+        }).collect(Collectors.toList());
     }
 
     @Override
     public void eliminarRecepcion(Integer id) {
+        if (!repo.existsById(id)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Recepción no encontrada");
+        }
         repo.deleteById(id);
     }
 
     @Override
     public List<RecepcionProductoDto> registrarRecepciones(List<RecepcionProductoCreateRequest> reqs) {
-        return reqs.stream().map(this::registrarRecepcion).toList();
+        if (reqs == null || reqs.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Lista de recepciones vacía");
+        }
+        return reqs.stream().map(this::registrarRecepcion).collect(Collectors.toList());
     }
 }
-
